Update gmail filter notebook

--- a/example/application/gmail_filter.ipynb
+++ b/example/application/gmail_filter.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook for Gmail Spam Filter Using LLM\n",
+    "\n",
+    "In this example, we will show you how to use LLM to filter your spam gmails via uniflow.\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [Google API key](https://ai.google.dev/tutorials/setup) to run the code. Once you have the key, set it as the environment variable `GOOGLE_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)\n",
+    "\n",
+    "Next, you will need a valid [OpenAI API key](https://platform.openai.com/api-keys) to run the code. Once you have the key, set it as the environment variable `OPENAI_API_KEY` within a `.env` file in the root directory of this repository. For more details, see this [instruction](https://github.com/CambioML/uniflow/tree/main#api-keys)\n",
+    "\n",
+    "### Update system path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -28,19 +47,35 @@
        "True"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from uniflow import Context\n",
+    "from uniflow.flow.client import ExtractClient\n",
+    "from uniflow.flow.config import ExtractGmailConfig\n",
+    "from uniflow.viz import Viz\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config  import TransformGmailSpamConfig\n",
+    "from uniflow.op.model.model_config  import GoogleModelConfig, OpenAIModelConfig\n",
+    "\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "load_dotenv()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display the different flows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -63,27 +98,29 @@
        " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from uniflow import Context\n",
-    "from uniflow.flow.client import ExtractClient\n",
-    "from uniflow.flow.config import ExtractGmailConfig\n",
-    "from uniflow.viz import Viz\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
-    "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow.config  import TransformGmailSpamConfig\n",
-    "from uniflow.op.model.model_config  import GoogleModelConfig, OpenAIModelConfig\n",
-    "\n",
     "FlowFactory.list()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize an `ExtractClient` with `ExtractGmailConfig` Config.\n",
+    "\n",
+    "You will need to setup and download `credentials.json` following google workspace [instructions](https://developers.google.com/gmail/api/quickstart/python)\n",
+    "\n",
+    "`extract_client` will extract the latest `10` unread email body and snippet."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:04<00:00,  4.04s/it]\n"
+      "100%|██████████| 1/1 [00:03<00:00,  3.51s/it]\n"
      ]
     }
    ],
@@ -113,11 +150,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize an `TransformClient` with `TransformGmailSpamConfig` Config.\n",
+    "\n",
+    "`TransformGmailSpamConfig` contains instructions and few shots prompt regarding spam classification task.\n",
+    "\n",
+    "`transform_client` will take the extract result from `extract_client` and further transform it with output contains classification label."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Comment and uncomment to try both openai and google models\n",
     "transform_client = TransformClient(\n",
     "    TransformGmailSpamConfig(\n",
     "        flow_name=\"TransformOpenAIFlow\",\n",
@@ -164,6 +213,13 @@
    ],
    "source": [
     "transform_output = transform_client.run(transform_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update corresponding email with label"
    ]
   },
   {
