--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 132,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 133,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 134,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,19 +248,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunk text (first 40 chars): 'arn you, if you don't tell me that this ' has token length: 4031\n",
+      "Chunk text (first 40 chars): 'Anna Pavlovna's alarm was justified, for' has token length: 3888\n",
+      "Chunk text (first 40 chars): 'Influence in society, however, is a capi' has token length: 4068\n",
+      "Chunk text (first 40 chars): '\"Princesse, au revoir,\" cried he, stumbl' has token length: 3967\n",
+      "Chunk text (first 40 chars): 'It was past one o'clock when Pierre left' has token length: 3984\n",
+      "Chunk text (first 40 chars): '\"Dear Countess, what an age... She has b' has token length: 2056\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:06<00:00,  1.05it/s]\n"
+      "100%|██████████| 7/7 [00:07<00:00,  1.05s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'output': [{'error': 'No errors.',\n",
+      "              'response': ['question: Who is the illegitimate son of Count '\n",
+      "                           'Bezukhov?\\n'\n",
+      "                           'answer: The illegitimate son of Count Bezukhov is '\n",
+      "                           'a stout, heavily built young man with '\n",
+      "                           'close-cropped hair, spectacles, and a brown dress '\n",
+      "                           'coat.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x12633f430>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': ['question: Who is the elderly lady sitting with the '\n",
+      "                           'old aunt?\\n'\n",
+      "                           'answer: The elderly lady is Princess Drubetskaya, '\n",
+      "                           'who belongs to one of the best families in Russia '\n",
+      "                           'and is poor.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x12633fee0>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': ['question: Who did the footmen assist into the '\n",
+      "                           'carriage?\\n'\n",
+      "                           'answer: The footman helped the princess into the '\n",
+      "                           'carriage.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x121f5d2b0>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': ['question: Who was Pierre staying with and sharing '\n",
+      "                           'the dissipated life of their son Anatole?\\n'\n",
+      "                           'answer: Pierre was staying at Prince Vasili '\n",
+      "                           \"Kuragin's and sharing the dissipated life of his \"\n",
+      "                           'son Anatole.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x12629e3a0>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': [\"question: Who is the countess' gigantic footman?\\n\"\n",
+      "                           \"answer: The countess' gigantic footman is \"\n",
+      "                           'announcing Marya Lvovna Karagina and her daughter '\n",
+      "                           'into the drawing room.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x121ef39d0>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': [\"question: Who was the count's eldest son?\\n\"\n",
+      "                           \"answer: Nicholas, the undergraduate, the count's \"\n",
+      "                           'eldest son.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x125da0be0>},\n",
+      " {'output': [{'error': 'No errors.',\n",
+      "              'response': ['question: What does Natasha count on her fingers '\n",
+      "                           'in the last part of the passage?\\n'\n",
+      "                           'answer: Natasha counts thirteen, fourteen, '\n",
+      "                           'fifteen, sixteen on her slender little fingers.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x12629d730>}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "output = client.run(contexts)"
+    "output = client.run(contexts)\n",
+    "\n",
+    "from pprint import pprint\n",
+    "pprint(output)"
    ]
   },
   {
@@ -273,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 138,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -283,64 +356,64 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the young woman in the drawing room who is soon to become a mother?\n",
+       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The young woman in the drawing room who is soon to become a mother is the Princess Bolkonskaya.\n",
+       "            <b>Answer:</b> The illegitimate son of Count Bezukhov is a stout, heavily built young man with close-cropped hair, spectacles, and a brown dress coat.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the elderly lady who asked Prince Vasili for a favor?\n",
+       "            <b>Question:</b> Who is the elderly lady sitting with the old aunt?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The elderly lady is Princess Drubetskaya.\n",
+       "            <b>Answer:</b> The elderly lady is Princess Drubetskaya, who belongs to one of the best families in Russia and is poor.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What happened when Prince Hippolyte approached the little princess and began to whisper something?\n",
+       "            <b>Question:</b> Who did the footmen assist into the carriage?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The princess, as usual, spoke smilingly and listened with a laugh. Prince Hippolyte put his arm around her for a long time, as though embracing her, before she gracefully moved away.\n",
+       "            <b>Answer:</b> The footman helped the princess into the carriage.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole?\n",
+       "            <b>Question:</b> Who was Pierre staying with and sharing the dissipated life of their son Anatole?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre\n",
+       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room with her smiling round-faced daughter?\n",
+       "            <b>Question:</b> Who is the countess' gigantic footman?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> A tall, stout, and proud-looking woman entered the drawing room with her round-faced smiling daughter.\n",
+       "            <b>Answer:</b> The countess' gigantic footman is announcing Marya Lvovna Karagina and her daughter into the drawing room.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the visitor in this passage?\n",
+       "            <b>Question:</b> Who was the count's eldest son?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The visitor is Princess Anna Mikhaylovna.\n",
+       "            <b>Answer:</b> Nicholas, the undergraduate, the count's eldest son.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> How old is Natasha when she is counting on her fingers in the last part of the passage?\n",
+       "            <b>Question:</b> What does Natasha count on her fingers in the last part of the passage?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha is sixteen years old when she is counting on her fingers.\n",
+       "            <b>Answer:</b> Natasha counts thirteen, fourteen, fifteen, sixteen on her slender little fingers.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
