--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:07<00:00,  1.05s/it]"
+      "100%|██████████| 7/7 [00:06<00:00,  1.07it/s]"
      ]
     },
     {
@@ -275,50 +275,54 @@
      "output_type": "stream",
      "text": [
       "[{'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who is the illegitimate son of Count '\n",
-      "                           'Bezukhov?\\n'\n",
-      "                           'answer: The illegitimate son of Count Bezukhov is '\n",
-      "                           'a stout, heavily built young man with '\n",
-      "                           'close-cropped hair, spectacles, and a brown dress '\n",
-      "                           'coat.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x12633f430>},\n",
+      "              'response': ['question: Who was the well-known Anna Pavlovna '\n",
+      "                           \"Scherer's maid of honor and favorite of the \"\n",
+      "                           'Empress Marya Fedorovna?\\n'\n",
+      "                           \"answer: The well-known Anna Pavlovna Scherer's \"\n",
+      "                           'maid of honor and favorite of the Empress Marya '\n",
+      "                           'Fedorovna was Prince Vasili Kuragin.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x125da0550>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who is the elderly lady sitting with the '\n",
-      "                           'old aunt?\\n'\n",
-      "                           'answer: The elderly lady is Princess Drubetskaya, '\n",
-      "                           'who belongs to one of the best families in Russia '\n",
-      "                           'and is poor.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x12633fee0>},\n",
+      "              'response': ['question: Which character in the story is '\n",
+      "                           'described as \"very lovely\"?\\n'\n",
+      "                           'answer: Princess Helene.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x12629d760>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who did the footmen assist into the '\n",
-      "                           'carriage?\\n'\n",
-      "                           'answer: The footman helped the princess into the '\n",
-      "                           'carriage.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x121f5d2b0>},\n",
+      "              'response': ['question: Who left the hall after taking leave of '\n",
+      "                           'Anna Pavlovna, having managed to speak to Lise '\n",
+      "                           'about a match between Anatole and the little '\n",
+      "                           \"princess' sister-in-law?\\n\"\n",
+      "                           'answer: Anna Pavlovna left the hall after taking '\n",
+      "                           'leave of the princess and managing to speak to '\n",
+      "                           'Lise about a match between Anatole and the little '\n",
+      "                           \"princess' sister-in-law.\"]}],\n",
+      "  'root': <uniflow.node.Node object at 0x1262441c0>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who was Pierre staying with and sharing '\n",
-      "                           'the dissipated life of their son Anatole?\\n'\n",
-      "                           'answer: Pierre was staying at Prince Vasili '\n",
+      "              'response': ['question: Who is Pierre staying with and sharing a '\n",
+      "                           'dissipated life with?\\n'\n",
+      "                           'answer: Pierre is staying at Prince Vasili '\n",
       "                           \"Kuragin's and sharing the dissipated life of his \"\n",
-      "                           'son Anatole.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x12629e3a0>},\n",
+      "                           'son Anatole, whom they are planning to reform by '\n",
+      "                           \"marrying him to Prince Andrew's sister.\"]}],\n",
+      "  'root': <uniflow.node.Node object at 0x126302100>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': [\"question: Who is the countess' gigantic footman?\\n\"\n",
-      "                           \"answer: The countess' gigantic footman is \"\n",
-      "                           'announcing Marya Lvovna Karagina and her daughter '\n",
-      "                           'into the drawing room.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x121ef39d0>},\n",
+      "              'response': ['question: Who is the protagonist of this story?\\n'\n",
+      "                           'answer: The protagonist of this story is Pierre, '\n",
+      "                           'who is attending a drinking and gambling gathering '\n",
+      "                           \"at Kuragin's house.\"]}],\n",
+      "  'root': <uniflow.node.Node object at 0x126302be0>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': [\"question: Who was the count's eldest son?\\n\"\n",
-      "                           \"answer: Nicholas, the undergraduate, the count's \"\n",
-      "                           'eldest son.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x125da0be0>},\n",
+      "              'response': ['question: Who is the countess addressing when she '\n",
+      "                           'says \"Ma chere, there is a time for everything,\" '\n",
+      "                           'with feigned severity?\\n'\n",
+      "                           'answer: The count, Ilya.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x125db0dc0>},\n",
       " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: What does Natasha count on her fingers '\n",
-      "                           'in the last part of the passage?\\n'\n",
-      "                           'answer: Natasha counts thirteen, fourteen, '\n",
-      "                           'fifteen, sixteen on her slender little fingers.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x12629d730>}]\n"
+      "              'response': ['question: What did Natasha count on her little '\n",
+      "                           'finger?\\n'\n",
+      "                           'answer: Natasha counted \"thirteen, fourteen, '\n",
+      "                           'fifteen, sixteen\" on her slender little finger.']}],\n",
+      "  'root': <uniflow.node.Node object at 0x1262b8820>}]\n"
      ]
     },
     {
@@ -346,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -356,64 +360,64 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov?\n",
+       "            <b>Question:</b> Who was the well-known Anna Pavlovna Scherer's maid of honor and favorite of the Empress Marya Fedorovna?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The illegitimate son of Count Bezukhov is a stout, heavily built young man with close-cropped hair, spectacles, and a brown dress coat.\n",
+       "            <b>Answer:</b> The well-known Anna Pavlovna Scherer's maid of honor and favorite of the Empress Marya Fedorovna was Prince Vasili Kuragin.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the elderly lady sitting with the old aunt?\n",
+       "            <b>Question:</b> Which character in the story is described as \"very lovely\"?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The elderly lady is Princess Drubetskaya, who belongs to one of the best families in Russia and is poor.\n",
+       "            <b>Answer:</b> Princess Helene.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who did the footmen assist into the carriage?\n",
+       "            <b>Question:</b> Who left the hall after taking leave of Anna Pavlovna, having managed to speak to Lise about a match between Anatole and the little princess' sister-in-law?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The footman helped the princess into the carriage.\n",
+       "            <b>Answer:</b> Anna Pavlovna left the hall after taking leave of the princess and managing to speak to Lise about a match between Anatole and the little princess' sister-in-law.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was Pierre staying with and sharing the dissipated life of their son Anatole?\n",
+       "            <b>Question:</b> Who is Pierre staying with and sharing a dissipated life with?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole.\n",
+       "            <b>Answer:</b> Pierre is staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, whom they are planning to reform by marrying him to Prince Andrew's sister.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the countess' gigantic footman?\n",
+       "            <b>Question:</b> Who is the protagonist of this story?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The countess' gigantic footman is announcing Marya Lvovna Karagina and her daughter into the drawing room.\n",
+       "            <b>Answer:</b> The protagonist of this story is Pierre, who is attending a drinking and gambling gathering at Kuragin's house.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the count's eldest son?\n",
+       "            <b>Question:</b> Who is the countess addressing when she says \"Ma chere, there is a time for everything,\" with feigned severity?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Nicholas, the undergraduate, the count's eldest son.\n",
+       "            <b>Answer:</b> The count, Ilya.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What does Natasha count on her fingers in the last part of the passage?\n",
+       "            <b>Question:</b> What did Natasha count on her little finger?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha counts thirteen, fourteen, fifteen, sixteen on her slender little fingers.\n",
+       "            <b>Answer:</b> Natasha counted \"thirteen, fourteen, fifteen, sixteen\" on her slender little finger.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
