--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,96 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunk text (first 40 chars): 'arn you, if you don't tell me that this ' has token length: 4031\n",
-      "Chunk text (first 40 chars): 'Anna Pavlovna's alarm was justified, for' has token length: 3888\n",
-      "Chunk text (first 40 chars): 'Influence in society, however, is a capi' has token length: 4068\n",
-      "Chunk text (first 40 chars): '\"Princesse, au revoir,\" cried he, stumbl' has token length: 3967\n",
-      "Chunk text (first 40 chars): 'It was past one o'clock when Pierre left' has token length: 3984\n",
-      "Chunk text (first 40 chars): '\"Dear Countess, what an age... She has b' has token length: 2056\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:06<00:00,  1.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who was the well-known Anna Pavlovna '\n",
-      "                           \"Scherer's maid of honor and favorite of the \"\n",
-      "                           'Empress Marya Fedorovna?\\n'\n",
-      "                           \"answer: The well-known Anna Pavlovna Scherer's \"\n",
-      "                           'maid of honor and favorite of the Empress Marya '\n",
-      "                           'Fedorovna was Prince Vasili Kuragin.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x125da0550>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Which character in the story is '\n",
-      "                           'described as \"very lovely\"?\\n'\n",
-      "                           'answer: Princess Helene.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x12629d760>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who left the hall after taking leave of '\n",
-      "                           'Anna Pavlovna, having managed to speak to Lise '\n",
-      "                           'about a match between Anatole and the little '\n",
-      "                           \"princess' sister-in-law?\\n\"\n",
-      "                           'answer: Anna Pavlovna left the hall after taking '\n",
-      "                           'leave of the princess and managing to speak to '\n",
-      "                           'Lise about a match between Anatole and the little '\n",
-      "                           \"princess' sister-in-law.\"]}],\n",
-      "  'root': <uniflow.node.Node object at 0x1262441c0>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who is Pierre staying with and sharing a '\n",
-      "                           'dissipated life with?\\n'\n",
-      "                           'answer: Pierre is staying at Prince Vasili '\n",
-      "                           \"Kuragin's and sharing the dissipated life of his \"\n",
-      "                           'son Anatole, whom they are planning to reform by '\n",
-      "                           \"marrying him to Prince Andrew's sister.\"]}],\n",
-      "  'root': <uniflow.node.Node object at 0x126302100>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who is the protagonist of this story?\\n'\n",
-      "                           'answer: The protagonist of this story is Pierre, '\n",
-      "                           'who is attending a drinking and gambling gathering '\n",
-      "                           \"at Kuragin's house.\"]}],\n",
-      "  'root': <uniflow.node.Node object at 0x126302be0>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: Who is the countess addressing when she '\n",
-      "                           'says \"Ma chere, there is a time for everything,\" '\n",
-      "                           'with feigned severity?\\n'\n",
-      "                           'answer: The count, Ilya.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x125db0dc0>},\n",
-      " {'output': [{'error': 'No errors.',\n",
-      "              'response': ['question: What did Natasha count on her little '\n",
-      "                           'finger?\\n'\n",
-      "                           'answer: Natasha counted \"thirteen, fourteen, '\n",
-      "                           'fifteen, sixteen\" on her slender little finger.']}],\n",
-      "  'root': <uniflow.node.Node object at 0x1262b8820>}]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 6/6 [00:05<00:00,  1.11it/s]\n"
      ]
     }
    ],
    "source": [
-    "output = client.run(contexts)\n",
-    "\n",
-    "from pprint import pprint\n",
-    "pprint(output)"
+    "output = client.run(contexts)"
    ]
   },
   {
@@ -350,84 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the well-known Anna Pavlovna Scherer's maid of honor and favorite of the Empress Marya Fedorovna?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The well-known Anna Pavlovna Scherer's maid of honor and favorite of the Empress Marya Fedorovna was Prince Vasili Kuragin.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Which character in the story is described as \"very lovely\"?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Princess Helene.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who left the hall after taking leave of Anna Pavlovna, having managed to speak to Lise about a match between Anatole and the little princess' sister-in-law?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Anna Pavlovna left the hall after taking leave of the princess and managing to speak to Lise about a match between Anatole and the little princess' sister-in-law.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is Pierre staying with and sharing a dissipated life with?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre is staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, whom they are planning to reform by marrying him to Prince Andrew's sister.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the protagonist of this story?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The protagonist of this story is Pierre, who is attending a drinking and gambling gathering at Kuragin's house.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the countess addressing when she says \"Ma chere, there is a time for everything,\" with feigned severity?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The count, Ilya.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    \n",
-       "    <div style=\"margin-bottom: 20px;\">\n",
-       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What did Natasha count on her little finger?\n",
-       "        </div>\n",
-       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha counted \"thirteen, fourteen, fifteen, sixteen\" on her slender little finger.\n",
-       "        </div>\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "KeyError",
+     "evalue": "'output'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[174], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m html_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m o \u001b[38;5;129;01min\u001b[39;00m output:\n\u001b[0;32m---> 18\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43moutput\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresponse\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# Split the response based on the first occurrence of '\\nanswer'\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     split_index \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124manswer\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'output'"
+     ]
     }
    ],
    "source": [
