--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 195,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 196,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 197,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:05<00:00,  1.11it/s]\n"
+      "100%|██████████| 7/7 [00:05<00:00,  1.22it/s]\n"
      ]
     }
    ],
@@ -273,20 +273,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 201,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'output'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[174], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m html_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m o \u001b[38;5;129;01min\u001b[39;00m output:\n\u001b[0;32m---> 18\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43moutput\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresponse\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# Split the response based on the first occurrence of '\\nanswer'\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     split_index \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124manswer\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'output'"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> Who is the stout, heavily built young man with close-cropped hair and spectacles?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> The stout, heavily built young man with close-cropped hair and spectacles is an illegitimate son of Count Bezukhov and was educated abroad. His name is Pierre.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> Who entered the drawing room in the last context?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> Prince Andrew Bolkonski, the little princess' husband.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> What is Prince Hippolyte doing as the conversation comes to an end?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> Prince Hippolyte begins whispering something to the little princess and then runs out to the porch to follow her into the carriage.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> Who was Pierre staying with at Prince Vasili Kuragin's?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> Pierre was staying with Prince Vasili Kuragin and sharing the dissipated life of his son Anatole.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> Who entered the drawing room with her daughter in a rustling dress?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> A tall, stout, and proud-looking woman with a round-faced smiling daughter.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> Who was the visitor addressing when she asked if Mimi was a relation of hers?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> The visitor was addressing Natasha.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    \n",
+       "    <div style=\"margin-bottom: 20px;\">\n",
+       "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
+       "            <b>Question:</b> How long does the man suggest waiting before asking for Natasha's hand in marriage?\n",
+       "        </div>\n",
+       "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
+       "            <b>Answer:</b> In another four years.\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
